--- a/style.css
+++ b/style.css
@@ -47,6 +47,15 @@ nav {
   background-color: #1c1a19;
   padding: 25px;
   height: 100%;
+  background-image: url("./Assets/images/backgroundimage.png");
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: right -100% bottom 0;
+
+}
+
+.textcontainer{
+  margin-top: 15%;
 }
 
 .h5 {
