--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
 body {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: 0 !important;
-  height: 100vh;
+  margin: 0;
 }
 
 nav {
   background-color: #3c3a39;
-  width: 90%;
   padding: 25px;
   color: #fff;
 }
@@ -43,23 +37,22 @@ nav {
 }
 
 .herosection {
-  width: 90%;
   background-color: #1c1a19;
   padding: 25px;
-  height: 100%;
+  height: 90vh;
   background-image: url("./Assets/images/backgroundimage.png");
   background-repeat: no-repeat;
-  background-size: 70%;
-  background-position: right -100% bottom 0;
+  background-size: 50%;
+  background-position: right -30% bottom 0;
 }
 
 .textcontainer {
-  margin-top: 15%;
+  margin-top: 25px;
 }
 
 .h5 {
   color: #ff6b00;
-  font-size: 57px;
+  font-size: 8vh;
   width: 300px;
   font-weight: 400;
   margin-bottom: 5px;
