--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 body {
-  align-items: center;
-  margin: 0 !important;
-  height: 100vh;
+  justify-content: center;
+  margin: 0;
 }
 
 nav {
   background-color: #3c3a39;
-  width: 90%;
   padding: 25px;
   color: #fff;
 }
@@ -39,22 +37,23 @@ nav {
 }
 
 .herosection {
-  width: 90%;
   background-color: #1c1a19;
   padding: 25px;
-  height: 70%;
+  height: 520px;
   background-image: url("./Assets/images/backgroundimage.png");
   background-repeat: no-repeat;
-  background-size: 83%;
-  background-position: right -128px bottom -60px;
+  background-size: 80%;
+  background-position: right -128px bottom -51px;
 }
 
-
+.textcontainer {
+  margin-top: 25px;
+}
 
 .h5 {
   color: #ff6b00;
-  font-size: 57px;
-  width: 300px;
+  font-size: 15vw;
+  width: 90%;
   font-weight: 400;
   margin-bottom: 5px;
   font-family:
@@ -86,10 +85,11 @@ nav {
   margin: 5px;
 }
 
-p {
+.hero-paragraph {
   color: #ffff;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 26px;
+  width: 100%;
 }
 
 .icon-container {
@@ -114,191 +114,78 @@ li {
   cursor: pointer;
 }
 
-@media (min-width: 768px) {
-  body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 !important;
-    height: 100vh;
-  }
+/* MIDDLESECTION */
 
-  nav {
-    background-color: #3c3a39;
-    width: 94%;
-    padding: 25px 50px;
-    color: #ffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.middlesection-container {
+  padding: 16px;
+  width: 90%;
+  text-align: center;
+  margin-top: 8%;
+}
 
-  .navbar-innercontainer {
-    display: flex;
-    justify-content: space-between;
-    align-self: center;
-    width: 80%;
-  }
+.middlesection_header_title {
+  font-size: 10vw;
+  margin-bottom: 15%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 400;
+}
 
-  .nav-logo {
-    font-weight: 600;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-    font-size: large;
-    transition: 0.5s;
-    cursor: pointer;
-  }
+hr {
+  color: #212121;
+  margin-bottom: 5%;
+}
 
-  .nav-logo:hover {
-    color: #ff6b00;
-    transition: 0.5s;
-  }
+.middlesection-image {
+  margin-top: 7vh;
+  width: 100%;
+}
 
-  .nav-items {
-    display: flex;
-    width: 300px;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0;
-  }
+.multiples-stories_container {
+  padding: 16px;
+  width: 90%;
+  margin-top: 8%;
+}
 
-  .icon {
-    width: 30px;
-    height: 100%;
-    margin: 0;
-  }
+.multiples-stories_header {
+  font-size: 10vw;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+}
 
-  .nav-link {
-    list-style: none;
-    cursor: pointer;
-    transition: 0.5s;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-    display: inline-flex;
-    justify-content: baseline;
-  }
+.multiples-stories_paragraph {
+  color: #091e42;
+  font-size: 18px;
+  line-height: 26px;
+}
 
-  .link {
-    text-decoration: none;
-    color: #ffff;
-    transition: 0.5s;
-  }
+.button-flex {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+}
 
-  .link:hover {
-    color: #ff6b00;
-    transition: 0.5s;
-  }
+.default-btn {
+  padding: 12px 12px;
+  font-size: 3vw;
+  border-radius: 0;
+  border: 1px solid #8993a4;
+  background-color: #fff;
+}
 
-  .active {
-    color: #ff6b00;
-    font-weight: bold;
-  }
+.primarybtn {
+  padding: 15px;
+  font-size: 4vw;
+  border-radius: 0;
+  border: 1px solid #ff6b00;
+  background-color: #ff6b00;
+  color: #ffff;
+  font-weight: 800;
+  line-height: 24px;
+  width: 100%;
+}
 
-  .baricon {
-    width: 25px;
-    cursor: pointer;
-    display: none;
-  }
-
-  .bar {
-    width: 100%;
-    background-color: #ffff;
-    padding: 1.5px;
-    margin-bottom: 4px;
-  }
-
-  .herosection {
-    width: 98%;
-    background-color: #1c1a19;
-    padding: 25px;
-    height: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    justify-content: left;
-    background-image: url("./Assets/images/backgroundimage.png");
-    background-repeat: no-repeat;
-    background-size: 35%;
-    background-position-x: right;
-  }
-
-  .h5 {
-    color: #ff6b00;
-    font-size: 76px;
-    width: 400px;
-    font-weight: 400;
-    margin-bottom: 10px;
-    margin-top: 0;
-    font-family:
-      create "Lucida Sans",
-      "Lucida Sans Regular",
-      "Lucida Grande",
-      "Lucida Sans Unicode",
-      Geneva,
-      Verdana,
-      sans-serif;
-  }
-
-  .h6 {
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-    font-size: 24px;
-    color: #ffff;
-    font-weight: 400;
-    margin: 10px;
-  }
-
-  p {
-    color: #ffff;
-    font-size: 16px;
-    width: 600px;
-  }
-
-  .icon-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    width: 7%;
-    flex-direction: column;
-    height: 30%;
-    padding-left: 30px;
-  }
-
-  .icon-image {
-    width: 20px;
-    height: auto;
-    cursor: pointer;
-  }
+.multiple-btn-container {
+  margin-top: 5%;
+  width: 40%;
 }
