--- a/style.css
+++ b/style.css
@@ -3,16 +3,11 @@
   margin: 0;
   padding: 0;
 }
-#header {
-  background-color: #3c3a39;
-}
-
 
 nav {
   background-color: #3c3a39;
   padding: 25px;
   color: #fff;
-
 }
 
 .nav-items {
@@ -48,8 +43,7 @@ nav {
   height: 520px;
   background-image: url("./Assets/images/backgroundimage.png");
   background-repeat: no-repeat;
-  background-size: 80%;
-  background-position: right -128px bottom -51px;
+  background-position: right bottom -30px;
 }
 
 .textcontainer {
@@ -57,56 +51,45 @@ nav {
 }
 
 .h5 {
-  color: #ff6b00;
-  font-size: 15vw;
-  width: 90%;
+  font-family: 'Crete Round', sans-serif;
+  font-size: 3.5rem;
   font-weight: 400;
-  margin-bottom: 5px;
-  font-family:
-    create "Lucida Sans",
-    "Lucida Sans Regular",
-    "Lucida Grande",
-    "Lucida Sans Unicode",
-    Geneva,
-    Verdana,
-    sans-serif;
+  line-height: 64px;
+  letter-spacing: 0.3700000047683716px;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  width: 20.438rem;
+  color: #ff6b00;
 }
 
 .h6 {
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
-  font-size: 24px;
-  color: #ffff;
-  font-weight: 400;
-  margin: 5px;
+  font-family: 'Inter', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 43px;
+  letter-spacing: 0;
+  text-align: left;
+  width: 20.483rem;
+  color: #fff5e1;
 }
 
 .hero-paragraph {
   color: #ffff;
-  font-size: 18px;
-  line-height: 26px;
-  width: 100%;
+  font-size: 16px;
+  line-height: 24px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
 }
 
 .icon-container {
   display: flex;
   align-items: baseline;
-  width: 60%;
+  width: 141px;
   padding: 0;
-}
-
-.icon_link {
-  margin: 0 7px;
+  margin-top: 12px;
+  gap: 21px;
+  margin-left: 5px;
 }
 
 li {
@@ -122,18 +105,29 @@ li {
 
 /* MIDDLESECTION */
 
-.middlesection-container {
-  padding: 16px;
+.works {
   width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.75rem;
+  margin: 4rem auto;
+}
+
+.middlesection-container {
   text-align: center;
   margin-top: 8%;
 }
 
 .middlesection_header_title {
-  font-size: 10vw;
-  margin-bottom: 15%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+  font-family: 'Crete Round', sans-serif;
+  font-size: 40px;
   font-weight: 400;
+  line-height: 52px;
+  letter-spacing: 0;
+  font-style: normal;
+  margin-bottom: 3rem;
 }
 
 hr {
@@ -144,25 +138,33 @@ hr {
 .middlesection-image {
   margin-top: 7vh;
   width: 100%;
+  margin-bottom: 2rem;
 }
 
 .multiples-stories_container {
   padding: 16px;
-  width: 90%;
+  width: 100%;
   margin-top: 8%;
 }
 
 .multiples-stories_header {
-  font-size: 10vw;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
   font-weight: 400;
-  margin-top: 0;
+  font-size: 32px;
+  line-height: 44px;
+  margin-bottom: 1rem;
 }
 
 .multiples-stories_paragraph {
-  color: #091e42;
-  font-size: 18px;
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 26px;
+  color: #091e42;
+  margin-bottom: 12px;
 }
 
 .button-flex {
@@ -171,27 +173,384 @@ hr {
   padding: 0;
 }
 
-.default-btn {
-  padding: 12px 12px;
-  font-size: 3vw;
-  border-radius: 0;
-  border: 1px solid #8993a4;
-  background-color: #fff;
+.buttons {
+  display: flex;
+  gap: 19px;
 }
 
-.primarybtn {
-  padding: 15px;
-  font-size: 4vw;
+.default-btn {
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0;
+  text-align: left;
+  border: 1px solid #8993a4;
+  background-color: #fff;
+  padding: 10px 12px;
+}
+
+.miniprimarybtn {
+  padding: 12px;
   border-radius: 0;
   border: 1px solid #ff6b00;
   background-color: #ff6b00;
   color: #ffff;
-  font-weight: 800;
+  line-height: 24px;
+  width: 131px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.smallprimarybtn {
+  padding: 12px;
+  border-radius: 0;
+  border: 1px solid #ff6b00;
+  background-color: #ff6b00;
+  color: #ffff;
+  line-height: 24px;
+  width: 195px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  transition: 0.5s;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.primarybtn {
+  padding: 15px;
+  border-radius: 0;
+  border: 1px solid #ff6b00;
+  background-color: #ff6b00;
+  color: #ffff;
   line-height: 24px;
   width: 100%;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  transition: 0.5s;
+}
+
+.primarybtn:hover,
+.miniprimarybtn:hover,
+.smallprimarybtn:hover {
+  background-color: #fff5e1;
+  border: 1px solid #f55800;
+  color: #f55800;
+  cursor: pointer;
+  transition: 0.5s;
 }
 
 .multiple-btn-container {
-  margin-top: 5%;
+  margin: 12px 0 1rem;
   width: 40%;
+}
+
+/* CARD SECTION */
+
+.professional_art_printing-section {
+  margin-top: 1.5rem;
+  display: grid;
+  grid-template-columns: auto;
+  row-gap: 1rem;
+}
+
+.professional_art_printing-section-items {
+  background-image: url("/Assets/images/bgimage-mulitpurples.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #ffff;
+  display: flex;
+  flex-direction: column;
+}
+
+.art_print_container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.75rem;
+  padding: 1rem;
+}
+
+.art_print_header {
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  width: 295px;
+  margin-bottom: 1rem;
+  padding-top: 72px;
+}
+
+.art_print_paragraph {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 24px;
+  height: 99px;
+}
+
+.art_print_btn_container {
+  display: flex;
+  gap: 1rem;
+  margin: 0.5rem 0 0.5rem;
+}
+
+.transparent-btn {
+  padding: 10px 12px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 30px;
+  background-color: #ffffff3d;
+  border: none;
+  color: #ffff;
+}
+
+/* DARK BACKGROUND */
+
+.dark_section {
+  background-color: #1c1a19;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.aboutme_section {
+  width: 100%;
+  background-image: url("/Assets/images/aboutme_backgroundimage.png");
+  background-repeat: no-repeat;
+  background-position: right bottom 22.69px;
+}
+
+.aboutme_container {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+  padding: 0 24px 0 24px;
+  width: 100%;
+}
+
+.aboutme_header_text {
+  height: 79px;
+  font-family: 'Crete Round', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 72px;
+  line-height: 88px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  letter-spacing: 0.37px;
+  color: #ff6b00;
+  margin-bottom: 24px;
+}
+
+.aboutme_paragraph {
+  height: 148px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  width: 327px;
+  color: #f4f5f7;
+}
+
+.aboutme_button_container {
+  margin-top: 24px;
+  margin-bottom: 201.68px;
+}
+
+/* LANGUAGE SECTION */
+
+.languages_section {
+  margin-top: 136.3px;
+  margin-bottom: 87.54px;
+}
+
+.skills_container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.flex-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  margin-bottom: 44.73px;
+}
+
+.rectangle_icon {
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  transform: rotate(-45deg);
+  margin-right: 25px;
+}
+
+.square_icon {
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  margin-right: 12px;
+}
+
+.ball_icon {
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  margin-right: 12px;
+  border-radius: 150px;
+}
+
+.language_label {
+  font-family: 'InaiMathi', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+}
+
+.skill_list_ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill_list {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  color: #fff;
+  margin-bottom: 32px;
+}
+
+/* FORM SECTION */
+
+.form_section {
+  margin-top: 69px;
+  padding: 0 25px 0 23px;
+}
+
+.form_section_container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form_section_text {
+  width: 327px;
+  height: 216px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  color: #172b4d;
+}
+
+.form_container {
+  padding-top: 58px;
+  background-color: white;
+}
+
+.comment_form {
+  width: 100%;
+  margin-bottom: 24px;
+}
+
+.textinput {
+  width: 100%;
+  padding: 15px 16px;
+  border: none;
+  border-bottom: 0.5px solid #dbd8d7;
+  margin-bottom: 24px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+
+  /* or 160% */
+
+  display: flex;
+  align-items: center;
+}
+
+.textinput:focus {
+  outline: none;
+}
+
+.textinput_textarea {
+  width: 100%;
+  padding: 12px;
+  font-family: 'Inter', sans-serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 15px;
+  background: #fbf8f7;
+  color: #3c3a39;
+  border: none;
+}
+
+.textinput_textarea:focus {
+  outline: none;
+}
+
+.form_btn_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 78px;
+}
+
+.form_icon_container {
+  color: #dfe1e6;
+  border-top: 1px solid;
+  width: 100%;
+  padding: 25px 0 65px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer_icon-container {
+  display: flex;
+  flex-direction: row;
+  gap: 22px;
+  padding: 0;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon_link {
+  padding: 0;
 }
