--- a/style.css
+++ b/style.css
@@ -529,6 +529,7 @@ hr {
   align-items: center;
   justify-content: center;
   margin-bottom: 78px;
+  margin-top: 10px;
 }
 
 .form_icon_container {
