--- a/style.css
+++ b/style.css
@@ -10,8 +10,35 @@ nav {
   color: #fff;
 }
 
+/* togglering section */
+
 .nav-items {
   display: none;
+}
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #ffff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 { opacity: 0; }
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
 }
 
 .navbar-innercontainer {
@@ -26,15 +53,8 @@ nav {
 }
 
 .baricon {
-  width: 20px;
+  display: inline-block;
   cursor: pointer;
-}
-
-.bar {
-  width: 100%;
-  background-color: #ffff;
-  padding: 1.5px;
-  margin-bottom: 4px;
 }
 
 .herosection {
@@ -578,7 +598,7 @@ hr {
   }
 
   .nav-items {
-    display: flex;
+    display: flex !important;
     gap: 32px;
     -webkit-animation: left 1s ease-out;
     animation: Left 1s ease-out;
