--- a/style.css
+++ b/style.css
@@ -8,20 +8,21 @@ nav {
   background-color: #3c3a39;
   padding: 25px;
   color: #fff;
+  position: fixed;
+  width: 100%;
 }
 
 /* togglering section */
 
 .nav-items {
   display: none;
-  height: 100%;
   position: absolute;
   background-color: #3c3a39;
+  height: 90vh;
   width: 100%;
   left: 0;
   top: 0;
-  padding-top: 1rem;
-  padding-left: 24px;
+  padding: 60px 24px 24px 24px;
 }
 
 .nav-link {
@@ -91,7 +92,7 @@ nav {
 
 .herosection {
   background-color: #1c1a19;
-  padding: 25px;
+  padding: 100px 25px 25px 25px;
   height: 520px;
   background-image: url("./Assets/images/backgroundimage.png");
   background-repeat: no-repeat;
@@ -456,12 +457,8 @@ hr {
   margin-bottom: 44.73px;
 }
 
-.rectangle_icon {
-  width: 18px;
-  height: 18px;
-  background: #ff6b00;
-  transform: rotate(-45deg);
-  margin-right: 25px;
+.rectangle {
+  margin-right: 12px;
 }
 
 .square_icon {
