--- a/style.css
+++ b/style.css
@@ -8,47 +8,36 @@ nav {
   background-color: #3c3a39;
   padding: 25px;
   color: #fff;
-  position: fixed;
-  width: 100%;
-  z-index: 2;
 }
 
 /* togglering section */
 
 .nav-items {
   display: none;
-  position: absolute;
-  background-color: #3c3a39;
-  height: 90vh;
-  width: 100%;
-  left: 0;
-  top: 0;
-  padding: 60px 24px 24px 24px;
+  margin-right: -240px;
+  height: auto;
+  width: 20%;
+  margin-bottom: -25px;
 }
-
-.nav-link {
-  display: block;
-  color: #fff;
-  padding: 1rem 0;
-  border-bottom: 1px solid #6f6c6b;
-}
-
-.link {
-  color: #fff;
-  font-size: 24px;
-  margin: 5rem 0;
+.nav-items .link {
   text-decoration: none;
-  font-family: 'Inter', sans-serif;
-  padding-left: 10px;
-}
-
-.icon {
-  padding-left: 10px;
+  line-height: 40px;
+  font-size: 18px;
+  text-align: center;
+  padding: 10px;
+  color: #fff;
 }
 
 .link:hover {
   color: #ff6b00;
 }
+
+.icon {
+  font-size: 15px;
+  width: 35%;
+  padding-left: 10px;
+}
+
 
 .container {
   display: inline-block;
@@ -60,10 +49,9 @@ nav {
 .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #67798e;
-  margin: 0 0 6px;
+  background-color: #ffff;
+  margin: 6px 0;
   transition: 0.4s;
-  z-index: 999;
 }
 
 .change .bar1 {
@@ -94,7 +82,7 @@ nav {
 
 .herosection {
   background-color: #1c1a19;
-  padding: 100px 25px 25px 25px;
+  padding: 25px;
   height: 520px;
   background-image: url("./Assets/images/backgroundimage.png");
   background-repeat: no-repeat;
@@ -264,6 +252,18 @@ hr {
   gap: 24px;
 }
 
+#errorMessage {
+  color: red;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+
+#successMsg {
+  color: green;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+
 .smallprimarybtn {
   padding: 12px;
   border-radius: 0;
@@ -324,16 +324,12 @@ hr {
 }
 
 .professional_art_printing-section-items {
-  z-index: 0;
-  position: relative;
+  background-image: url("/Assets/images/bgimage-mulitpurples.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   color: #ffff;
   display: flex;
   flex-direction: column;
-}
-
-.portfolio_image {
-  height: 100%;
-  width: 100%;
 }
 
 .art_print_container {
@@ -341,12 +337,7 @@ hr {
   justify-content: center;
   flex-direction: column;
   gap: 0.74rem;
-  padding: 10px 10px 0 10px;
-  position: absolute;
-  top: 0;
-  bottom: 12%;
-  visibility: hidden;
-  background: linear-gradient(#26262600, #262626e5);
+  padding: 1rem;
 }
 
 .art_print_header {
@@ -386,88 +377,6 @@ hr {
   background-color: #ffffff3d;
   border: none;
   color: #ffff;
-}
-
-.modal-container {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 30px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0, 0, 0);
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal {
-  padding: 24px;
-  background: #fff;
-  margin: 40px auto auto auto;
-  width: 100%;
-}
-
-.modal-content {
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-}
-
-.img-container {
-  width: 100%;
-}
-
-.modal-header {
-  font-family: 'Crete Round', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 32px;
-  line-height: 44px;
-  color: #172b4d;
-}
-
-.modal-paragraph {
-  width: 100%;
-}
-
-.modal-description {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 30px;
-  color: #344563;
-  margin-bottom: 64px;
-}
-
-.modal-list {
-  display: flex;
-  width: 100%;
-  gap: 8px;
-  margin: 12px 0 40px 0;
-}
-
-.modal-close-btn {
-  padding: 10px;
-  margin-top: 5px;
-  float: right;
-  cursor: pointer;
-}
-
-#modal-img {
-  width: 100%;
-  height: 100%;
-}
-
-.modal-btn-container {
-  display: flex;
-  gap: 12px;
-}
-
-.sourcelink {
-  text-decoration: none;
 }
 
 /* DARK BACKGROUND */
@@ -550,8 +459,12 @@ hr {
   margin-bottom: 44.73px;
 }
 
-.rectangle {
-  margin-right: 12px;
+.rectangle_icon {
+  width: 18px;
+  height: 18px;
+  background: #ff6b00;
+  transform: rotate(-45deg);
+  margin-right: 25px;
 }
 
 .square_icon {
@@ -700,11 +613,7 @@ hr {
   padding: 0;
 }
 
-.professional_art_printing-section-items:hover .art_print_container {
-  visibility: visible;
-}
-
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   nav {
     padding: 26px 142px 26px 154px;
   }
@@ -728,14 +637,6 @@ hr {
     gap: 32px;
     -webkit-animation: left 1s ease-out;
     animation: Left 1s ease-out;
-    height: 100%;
-    position: relative;
-    background-color: #3c3a39;
-    left: 0;
-    top: 0;
-    text-align: left;
-    padding: 0;
-    width: auto;
   }
 
   .nav-link {
@@ -750,13 +651,11 @@ hr {
     align-items: center;
     text-align: center;
     color: #fff;
-    border: none;
   }
 
   .link {
     text-decoration: none;
     color: #fff;
-    font-size: 15px;
   }
 
   .icon {
@@ -897,11 +796,6 @@ hr {
     grid-column: span 2;
   }
 
-  .portfolio_image {
-    height: 377px;
-    width: 100%;
-  }
-
   .multiples-stories_paragraph {
     font-weight: 200;
     font-size: 1.5vw;
@@ -909,87 +803,6 @@ hr {
     font-family: 'Inter', sans-serif;
     width: 100%;
     padding: 0;
-  }
-
-  .modal-container {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 60px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-
-  .modal {
-    padding: 24px;
-    background: #fff;
-    margin: 40px auto auto auto;
-    width: 80%;
-  }
-
-  .modal-content {
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-  }
-
-  .img-container {
-    width: 60%;
-  }
-
-  .modal-header {
-    font-family: 'Crete Round', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 32px;
-    line-height: 44px;
-    color: #172b4d;
-  }
-
-  .modal-paragraph {
-    width: 40%;
-  }
-
-  .modal-description {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 30px;
-    color: #344563;
-    margin-bottom: 64px;
-  }
-
-  .modal-list {
-    display: flex;
-    width: 40%;
-    gap: 8px;
-    margin: 12px 0 40px 0;
-  }
-
-  .modal-close-btn {
-    padding: 10px;
-    margin-top: 5px;
-    float: right;
-    cursor: pointer;
-  }
-
-  #modal-img {
-    width: 100%;
-  }
-
-  .modal-btn-container {
-    display: flex;
-    gap: 12px;
-  }
-
-  .sourcelink {
-    text-decoration: none;
   }
 
   /* CARD SECTION */
@@ -1002,8 +815,9 @@ hr {
   }
 
   .professional_art_printing-section-items {
+    background-image: url("/Assets/images/cardbackground.png");
     transition: 1s;
-    overflow: hidden;
+    background-size: cover;
   }
 
   .art_print_container {
@@ -1011,8 +825,10 @@ hr {
     justify-content: center;
     flex-direction: column;
     gap: 0.75rem;
+    padding: 1rem;
     visibility: hidden;
     background: linear-gradient(#26262600, #262626e5);
+    transition: 2s;
   }
 
   /* ABOUT ME SECTION */
@@ -1146,6 +962,7 @@ hr {
     text-align: start;
     padding: 0;
     align-items: flex-start;
+    justify-content: baseline;
   }
 
   .form_container {
@@ -1177,6 +994,7 @@ hr {
 
   .professional_art_printing-section-items:hover .art_print_container {
     visibility: visible;
+    transition: 2s;
   }
 
   @-webkit-keyframes Right {
